# Quantum_Backend_Bench

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LIMITATIONS.md  MANIFEST.in  METHODOLOGY.md  PROBLEM.md  README.md  SCHEMA.md  THEORY.md  USAGE.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
examples/: README.md  backend_capability_matrix.py  basic_benchmark.py  circuit_diagrams.py  compare_backends.py  experiment_report.py  generate_manifest.py  noise_manifest_builder.py  noise_sweep_demo.py  oracle_benchmarks.py  plot_gallery.py  quantum_volume_demo.py  repeated_runtime_analysis.py  research_studies.py  schema_walkthrough.py  suite_export.py
examples/manifests/: noise_sensitivity.json  runtime_scaling.json  structure_vs_runtime.json
quantum_backend_bench/: __init__.py  _runtime.py  cli.py
quantum_backend_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quantum_backend_bench/backends/: __init__.py  base_backend.py  braket_backend.py  cirq_backend.py  cudaq_backend.py  pennylane_backend.py  pyquil_backend.py  qiskit_backend.py  qutip_backend.py  tket_analysis.py
quantum_backend_bench/benchmarks/: __init__.py  bernstein_vazirani.py  deutsch_jozsa.py  ghz.py  grover.py  hamiltonian_sim.py  noise_sensitivity.py  qaoa_maxcut.py  qft.py  quantum_volume.py  random_circuit.py
quantum_backend_bench/core/: __init__.py  backend_metadata.py  benchmark_spec.py  diff.py  discovery.py  doctor.py  draw.py  environment.py  experiments.py  factory.py  manifest.py  metrics.py  presets.py  report.py  results.py  runner.py  suites.py  summary.py  validation.py
quantum_backend_bench/presets/: __init__.py  algorithmic.json  noise.json  runtime.json  sdk_smoke.json
quantum_backend_bench/utils/: formatting.py  io.py  plotting.py
tests/: test_backends.py  test_benchmarks.py  test_cli.py  test_diff.py  test_manifest.py  test_metrics.py  test_packaging.py  test_plotting.py  test_public_api.py
