[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-backend-bench"
version = "0.1.2"
description = "Backend-agnostic benchmarking toolkit for local quantum SDK simulators."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Sid Richards" },
]
[project.optional-dependencies]
braket = [
  "amazon-braket-sdk",
]
cirq = [
  "cirq",
]
dev = [
  "build",
  "black",
  "pytest",
  "ruff",
  "twine",
]
pennylane = [
  "pennylane",
]
plot = [
  "matplotlib",
]
tket = [
  "pytket",
]
all = [
  "amazon-braket-sdk",
  "cirq",
  "matplotlib",
  "pennylane",
  "pytket",
]

[project.scripts]
quantum-bench = "quantum_backend_bench.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["quantum_backend_bench*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
