[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-backend-bench"
version = "0.1.6"
description = "Backend-agnostic benchmarking toolkit for local quantum SDK simulators."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Sid Richards" },
]
[project.optional-dependencies]
braket = [
  "amazon-braket-sdk",
]
cirq = [
  "cirq",
]
cudaq = [
  "cudaq",
]
dev = [
  "build",
  "black",
  "pytest",
  "ruff",
  "twine",
]
pennylane = [
  "pennylane",
]
plot = [
  "matplotlib",
]
pyquil = [
  "pyquil",
]
qbraid = [
  "qbraid",
]
qiskit = [
  "qiskit",
  "qiskit-aer",
]
qsharp = [
  "qsharp",
]
qutip = [
  "qutip",
]
tket = [
  "pytket",
]
yaml = [
  "PyYAML",
]
all = [
  "amazon-braket-sdk",
  "cirq",
  "cudaq",
  "matplotlib",
  "pennylane",
  "pyquil",
  "pytket",
  "qbraid",
  "qiskit",
  "qiskit-aer",
  "qsharp",
  "qutip",
  "PyYAML",
]

[project.scripts]
quantum-bench = "quantum_backend_bench.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["quantum_backend_bench*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
